--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,4 @@ before_install:
     - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
     - PATH=${CUDA_HOME}/bin:${PATH}
 
-before_script:
-    - cd module4
-
-script: bash run.sh
+script: bash build_all.sh
