Working to create simple template makefile and assignment source code

--- a/module3/Makefile
+++ b/module3/Makefile
@@ -1,10 +1,2 @@
-CC=gcc                                                                                                                                                                                                                                   
-CFLAGS=-I.                                                                                                                                                                                                                               
-                                                                                                                                                                                                                                         
-REQ = assignment.h                                                                                                                                                                                                                       
-                                                                                                                                                                                                                                         
-%.o: %.c $(DEPS)                                                                                                                                                                                                                         
-    $(CC) -c -o $@ $< $(CFLAGS)                                                                                                                                                                                                      
-                                                                                                                                                                                                                                         
-assignment: assignment.o                                                                                                                                                                                                                 
-    $(CC) -o assignment.exe assignment.o
+all: assignment.c
+	gcc assignment.c -o assignment.exe
