--- a/module4/Makefile
+++ b/module4/Makefile
@@ -1,2 +1,8 @@
-all: assignment.c
-	gcc assignment.c -o assignment.exe
+all:
+	nvcc assignment.cu -o assignment.exe -std=c++11
+
+clean:
+	rm assignment.exe
+
+test:
+	./assignment.exe 3 256
